# CosmicLotto

./: .gitignore  .replit  README.md  analysis.py  app.py  db.py  ephemeris.py  features.py  forecast.py  ingest_powerball.py  model.py  pyproject.toml  replit.md  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-2-Add-a-Backtest-section-in-app-py-Imports-Add-from-mod_1771819306833.txt  Pasted-What-we-re-adding-now-model-py-new-real-implementation-_1771818951558.txt  Pasted-You-need-two-upgrades-now-Forecast-timestamps-must-be-e_1771743322547.txt  Pasted-You-now-want-for-each-of-the-next-10-draws-10-game-card_1771744793159.txt  Pasted-here-s-a-Replit-friendly-step-by-step-instruction-set-t_1771741964293.txt  Pasted-here-s-a-file-by-file-Replit-task-breakdown-you-can-pas_1771741401228.txt
data/: app.db
