[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.17.0",
    "skyfield>=1.54",
    "streamlit>=1.54.0",
]
